# project_landing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README-RU.md  README.md  project_structure.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: README.md  ci-develop.yml  ci-main.yml  deploy-production-tag.yml
deploy/: README.md
deploy/django/: Dockerfile
deploy/monitoring/: config.alloy
docs/: README.md
docs/en_EN/: GETTING_STARTED.md  README.md
docs/en_EN/architecture/: README.md  tech_stack.md
docs/en_EN/architecture/backend_django/: README.md  backend_readme.md  conftest.md  manage.md  roadmap.md  staticfiles.md
docs/en_EN/architecture/workers/: README.md
docs/en_EN/infrastructure/: README.md  git_flow.md
docs/en_EN/infrastructure/database/: README.md  connection.md
docs/en_EN/infrastructure/dependencies/: README.md
docs/en_EN/infrastructure/deployment/: MIGRATION_TO_TAGS.md  README.md  docker-compose-dev.md  docker-compose-prod.md  releases_via_tags.md
docs/en_EN/infrastructure/devops/: README.md  branching.md  docker.md  github-secrets.md
docs/en_EN/seo_optimization/: analytics_and_cookies.md  robots_txt_backup.txt  seo_implementation_summary.md
docs/en_EN/task/: 01-pythonpath-fixes.md  02-code-quality-fixes.md  03-documentation-updates.md  04-cicd-fixes.md  README.md
docs/ru_RU/: README.md
docs/ru_RU/features/: 01_account_architecture.md
src/: README.md
src/backend_django/: .env.example  .env.production  README.md
src/backend_django/api/: urls.py
src/backend_django/core/: asgi.py  urls.py  wsgi.py
src/backend_django/templates/: base.html
src/shared/core/: config.py  constants.py  logger.py  redis_service.py
src/shared/enums/: domain_enums.py
src/shared/schemas/: response.py  site_settings.py  user.py
src/shared/utils/: table_formatter.py  text.py
src/workers/core/: base.py  config.py  tasks.py
src/workers/notification_worker/: config.py  dependencies.py  worker.py
src/workers/templates/: base_email.html  cancellation.html  confirmation.html  example_notification.html  receipt_to_client.html  reengagement.html  reminder.html  render_preview.py  reply_to_client.html
tools/: README.md  __init__.py  migration_agent.py
tools/dev/: README.md  check.py  generate_project_tree.py
tools/init_project/: README.md  __init__.py  __main__.py  add_module.py  cli.py  config.py  remove_module.py  runner.py
tools/init_project/actions/: __init__.py
tools/init_project/installers/: __init__.py  base.py  bot_installer.py  django_installer.py  fastapi_installer.py  shared_installer.py
tools/media/: README.md  convert_to_webp.py  qr_generator.py
(+196 files in other folders)
